Follow up on refactoring BDI
- simplifies functions and refactors duplicated code